--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -83,5 +83,15 @@
       </script>
     </div>
     {% endif %}
+
+    <script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">
+      MathJax.Hub.Config({
+          tex2jax: {
+              inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+              displayMath: [ ['$$','$$'], ["\\[","\\]"] ]
+          }
+      });
+    </script>
 </body>
 </html>
